force-app/main/default/objects/Equipment__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <label>Asset_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>