force-app/main/default/objects/Equipment__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The facility where the equipment is installed or used.</description>
    <label>Facilities</label>
    <referenceTo>Facilities__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>