force-app/main/default/objects/Equipment__c/fields/Last_Service__c.field-meta.xml
<CustomField>
    <fullName>Last_Service__c</fullName>
    <label>Last_Service</label>
    <type>Date</type>
</CustomField>