force-app/main/default/objects/Equipment__c/fields/Maintenance_Staff__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Staff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The maintenance staff responsible for maintaining the equipment.</description>
    <label>Maintenance Staff</label>
    <referenceTo>Maintenance_Staff__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>