force-app/main/default/objects/Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Location__c</columns>
    <columns>Purchase_Date__c</columns>
    <columns>Last_Service__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>